--- a/estilo/style.css
+++ b/estilo/style.css
@@ -5,9 +5,19 @@
     padding: 0px;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Khand:wght@300;400;500;600;700&display=swap');
+
+:root{
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: "Khand", sans-serif;
+    --font3: "Just Another Hand", cursive;
+}
+
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--font1);
 }
 
 header{
@@ -18,6 +28,8 @@ header{
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 10vw;
 }
 header > p{
     padding-bottom: 50px;
@@ -35,6 +47,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font3);
+    font-size: 2.5vw;
 }
 section.normal{
     background-color: white;
@@ -47,7 +61,7 @@ section.imagem{
 }
 
 section.imagem > p{
-    width: 400px;
+    display: inline-block;
     background-color: rgb(19, 19, 19);
 }
 footer{
