--- a/estilo/style.css
+++ b/estilo/style.css
@@ -58,11 +58,26 @@ section.normal{
 section.imagem{
     background-color: rgb(43, 43, 43);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.575);
+    background-attachment: fixed;
 }
 
 section.imagem > p{
     display: inline-block;
-    background-color: rgb(19, 19, 19);
+    background-color: rgba(19, 19, 19, 0.664);
+    text-shadow: 1px 2px 0px black
+}
+section > p{
+    padding-bottom: 1em;
+}
+section#img01{
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+}
+section#img02{
+    background-image: url(../imagens/background002.jpg);
+    background-size: cover;
 }
 footer{
     background-color: black;
